--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
-allow several canvases
 show connected users
 set name
 save to disk on server
 tabs in canvas
 remove Users NotHere
+Setup database
+Add layers
